# taxi_tax

./: README.md  taxi_tax.kdbx
documents/: Bolt.csv  bolt_march.csv
export-backend/: .gitignore  pyproject.toml
export-backend/app/routes/: pdf_parser.py
export-backend/app/services/: csv_parser.py
pdf-backend/: pyproject.toml
pdf-backend/app/: main.py
pdf-backend/app/routes/: pdf_parser.py
pdf-backend/app/services/: parser.py
web_scraper/: main.py
